# maldet

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  README.md  index.html  mkdocs.yml  mlflow.db  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yaml  docs.yaml  publish.yaml
architecture/: index.html
config/: index.html
docs/: architecture.md  config.md  events.md  index.md  protocols.md  quickstart.md  reference.md  scaffold.md  stages.md
events/: index.html
protocols/: index.html
quickstart/: index.html
reference/: index.html
scaffold/: index.html
search/: search_index.json
src/maldet/: __init__.py  cli.py  manifest.py  protocols.py  runner.py  types.py
src/maldet/builtins/: __init__.py  predictors.py  readers.py
src/maldet/commands/: __init__.py  check.py  describe.py  introspect_schema.py  run.py  scaffold.py
src/maldet/evaluators/: __init__.py  binary.py
src/maldet/events/: __init__.py  jsonl.py  kinds.py  logger.py  mlflow_logger.py  stdout.py
src/maldet/templates/cnn/: Dockerfile.j2  README.md.j2  maldet.toml.j2  pyproject.toml.j2
src/maldet/templates/cnn/src/: configs.py.j2  features.py.j2  models.py.j2
src/maldet/templates/rf/: Dockerfile.j2  README.md.j2  maldet.toml.j2  pyproject.toml.j2
src/maldet/templates/rf/src/: configs.py.j2  features.py.j2  models.py.j2
src/maldet/trainers/: __init__.py  lightning_trainer.py  sklearn_trainer.py
stages/: index.html
tests/: conftest.py  test_check_strict_lint.py  test_cli.py  test_introspect_schema.py  test_manifest.py  test_protocols.py  test_runner.py  test_scaffold.py  test_types.py
tests/builtins/: test_predictors.py  test_readers.py
tests/evaluators/: test_binary.py  test_binary_emits_confusion_matrix.py  test_binary_emits_per_class.py
tests/events/: test_jsonl.py  test_kinds.py  test_kinds_confusion_matrix.py  test_kinds_per_class.py  test_logger_composite.py  test_mlflow_logger.py  test_stdout.py
tests/fixtures/: sample_configs.py  valid_manifest.toml
tests/integration/: test_e2e_lightning.py  test_e2e_sklearn.py
tests/trainers/: test_lightning.py  test_lightning_encoding.py  test_sklearn.py
